--- a/Project3/ClientApp/package.json
+++ b/Project3/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@data-ui/histogram": "0.0.84",
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
